--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image: ^4.1.7
   image_picker: ^1.0.7
+  typed_data: ^1.3.2
 
 dev_dependencies:
   flutter_test:
